--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -14,6 +14,8 @@
             android:id="@+id/browseRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:clipToPadding="false"
             android:visibility="gone"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
