--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,12 +3,12 @@
     <!-- Base application theme. -->
     <style name="Theme.CocktailApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/amber_700</item>
-        <item name="colorPrimaryVariant">@color/amber_700_lighter</item>
+        <item name="colorPrimary">@color/material_light_yellow_700</item>
+        <item name="colorPrimaryVariant">@color/amber_600_darker</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/amber_700</item>
-        <item name="colorSecondaryVariant">@color/amber_700_lighter</item>
+        <item name="colorSecondary">@color/material_light_yellow_700</item>
+        <item name="colorSecondaryVariant">@color/amber_600_darker</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?android:attr/colorBackground</item>
