--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,18 +2,18 @@
     <!-- Base application theme. -->
     <style name="Theme.CocktailApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/material_orange_700</item>
-        <item name="colorPrimaryVariant">@color/amber_600_darker</item>
+        <item name="colorPrimary">@color/material_light_yellow_700</item>
+        <item name="colorPrimaryVariant">@color/amber_700_lighter</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/amber_600</item>
-        <item name="colorSecondaryVariant">@color/amber_600_darker</item>
+        <item name="colorSecondary">@color/material_light_yellow_700</item>
+        <item name="colorSecondaryVariant">@color/amber_700_lighter</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?android:attr/colorBackground</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?android:attr/colorPrimary</item>
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
-        <item name="toolbarStyle">@style/PlainActionBar</item>
+        <item name="tabLayoutStyle">@style/SecondaryColoredTabLayout</item>
     </style>
 
     <style name="Theme.CocktailApp.NoActionBar">
