--- a/app/src/main/res/layout/activity_detailed_cocktail.xml
+++ b/app/src/main/res/layout/activity_detailed_cocktail.xml
@@ -26,17 +26,29 @@
 
         <TextView
             android:id="@+id/detailed_cocktail_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceHeadline5"/>
         <TextView
             android:id="@+id/detailed_cocktail_glass"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/detailed_cocktail_instructions"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Ingredients: "
+            android:textAppearance="?attr/textAppearanceHeadline5"/>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_ingredient_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
