--- a/app/src/main/res/layout/activity_detailed_cocktail.xml
+++ b/app/src/main/res/layout/activity_detailed_cocktail.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:orientation="vertical"
-    tools:context=".ui.main.DetailedCocktailActivity">
+    tools:context=".ui.cocktail.DetailedCocktailActivity">
 
     <ImageView
         android:id="@+id/detailed_cocktail_image"
