--- a/app/src/main/res/layout/item_browse_category.xml
+++ b/app/src/main/res/layout/item_browse_category.xml
@@ -9,9 +9,10 @@
     android:layout_marginLeft="@dimen/activity_horizontal_margin"
     android:layout_marginRight="@dimen/activity_horizontal_margin"
 
+    app:cardCornerRadius="@dimen/image_card_corner_radius"
     android:clickable="true">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -24,7 +25,7 @@
                 android:id="@+id/browseCategoryListItemCocktailImage"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintDimensionRatio="H,7:4"
+                app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -34,45 +35,68 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/browseCategoryListItemCocktailName"
-                android:layout_width="0dp"
+            <View
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:background="@drawable/shadow"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginEnd="8dp"
-                android:text="Testing"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+                android:padding="12dp"
+                android:paddingStart="16dp"
+                android:orientation="horizontal">
 
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end">
+                <TextView
+                    android:id="@+id/browseCategoryListItemCocktailName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="12dp"
+                    android:text="Testing"
+                    android:textColor="@color/white"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
-                <ImageView
-                    android:id="@+id/browseCategoryListItemAddFavorite"
+                <FrameLayout
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_favorite_border"
-                    />
+                    android:paddingTop="2dp"
+                    android:layout_gravity="end" >
 
-                <ImageView
-                    android:id="@+id/browseCategoryListItemRemoveFavorite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_favorite"
-                    android:visibility="invisible"
-                    />
+                    <ImageView
+                        android:id="@+id/browseCategoryListItemAddFavorite"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_favorite_border"
+                        app:tint="@color/white" />
 
-            </FrameLayout>
+                    <ImageView
+                        android:id="@+id/browseCategoryListItemRemoveFavorite"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_favorite"
+                        android:visibility="invisible"
+                        app:tint="@color/white" />
 
-        </LinearLayout>
+                </FrameLayout>
 
-    </LinearLayout>
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </FrameLayout>
 
 </com.google.android.material.card.MaterialCardView>
