--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CocktailApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.CocktailApp" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/material_light_yellow_700</item>
         <item name="colorPrimaryVariant">@color/amber_700_lighter</item>
@@ -20,8 +20,4 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
-    <style name="Theme.CocktailApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar" />
-
-    <style name="Theme.CocktailApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
