--- a/app/src/main/res/layout/activity_detailed_cocktail.xml
+++ b/app/src/main/res/layout/activity_detailed_cocktail.xml
@@ -44,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="2"
+            android:textSize="24sp"
             android:textAppearance="?attr/textAppearanceHeadline4"
             android:layout_marginTop="@dimen/detail_section_header_margin_top"
             />
