--- a/app/src/main/res/layout/measurement_list_item.xml
+++ b/app/src/main/res/layout/measurement_list_item.xml
@@ -5,18 +5,22 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/measurement_amount"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:text="•"
+        android:layout_marginEnd="4dp"/>
 
     <TextView
-        android:text=" "
+        android:id="@+id/measurement_amount"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:text="2 oz "/>
+<!--        android:textStyle="italic"-->
 
     <TextView
         android:id="@+id/measurement_name"
         android:layout_width="wrap_content"
+        android:text="Test"
         android:layout_height="match_parent" />
 
 </LinearLayout>
